--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
             storePassword '123456'
             storeFile file('key/debugKey.jks')
         }
+
+        config_other.initWith(signingConfigs.config_release)
     }
     compileSdkVersion 24
     buildToolsVersion '24.0.2'
@@ -66,6 +68,9 @@ android {
 //            buildConfigField "String", "APP_TYPE", 'debug'
 //            signingConfig signingConfigs.config_debug
         }
+        release2 {
+
+        }
     }
     productFlavors {
         flavor_1 {
@@ -79,7 +84,7 @@ android {
         }
         flavor_2 {
             applicationId 'com.jacksen.multichannel.debug'
-            signingConfig signingConfigs.config_debug
+            signingConfig signingConfigs.config_release
             manifestPlaceholders = [APP_NAME: "@string/app_name2"]
         }
     }
